// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio should render correctly 1`] = `
<div>
  <span
    class="css-1bt0gk1-Radio"
    data-testid="radio-input"
  >
    <input
      class="css-dswabq-Radio"
      type="radio"
      value="on"
    />
    <span
      class="css-1cnuipo-Radio"
    >
      <span
        class="css-smkmv8-Radio"
      />
      <span
        class="css-7s815w-Radio"
      />
    </span>
  </span>
</div>
`;

exports[`Radio should render correctly with color 1`] = `
<div>
  <span
    class="css-uel54d-Radio"
    data-testid="radio-input"
  >
    <input
      class="css-dswabq-Radio"
      type="radio"
      value="on"
    />
    <span
      class="css-1cnuipo-Radio"
    >
      <span
        class="css-smkmv8-Radio"
      />
      <span
        class="css-7s815w-Radio"
      />
    </span>
  </span>
</div>
`;
